--- a/micrograd/pyproject.toml
+++ b/micrograd/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "mypy>=1.18.2",
     "numpy>=2.3.4",
     "pytest>=8.4.2",
+    "scikit-learn>=1.7.2",
     "torch>=2.9.0",
 ]
 
